[tool.poetry]
name = "vextor"
version = "0.1.0"
description = ""
authors = ["Ismael Cabral"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
weaviate-client = "^3.16.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
